--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,7 @@ code {
 }
 
 .header {
-  background-color: orange; /* Deep blue */
+  background-color: orange;
   color: white;
   padding: 20px;
   margin: 0;
